--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 <body>
     <header class="min-h-screen bg-olive-100 relative overflow-hidden">
-        <nav class="absolute top-0 left-0 right-0 z-10 py-6">
+        <video 
+            autoplay 
+            loop 
+            muted 
+            playsinline 
+            class="absolute w-full h-full object-cover"
+            src="assets/olive_background_muted.mp4"
+        ></video>
+        <div class="absolute inset-0 bg-black bg-opacity-30"></div>
+        <nav class="absolute top-0 left-0 right-0 z-10 py-6 bg-olive-50">
             <div class="container flex justify-between items-center">
                 <div class="text-2xl font-playfair text-olive-800">Olivianism</div>
                 <ul class="flex space-x-8">
@@ -21,9 +30,9 @@
                 </ul>
             </div>
         </nav>
-        <div class="container h-screen flex flex-col justify-center items-center text-center">
-            <h1 class="text-5xl md:text-7xl font-playfair text-olive-800 mb-6">Welcome to Olivianism</h1>
-            <p class="text-xl md:text-2xl text-olive-700 max-w-2xl">Where the Olive Symbolizes the Eternal Circle of Life</p>
+        <div class="container h-screen flex flex-col justify-center items-center text-center relative z-20">
+            <h1 class="text-5xl md:text-7xl font-playfair text-white mb-6">Welcome to Olivianism</h1>
+            <p class="text-xl md:text-2xl text-white max-w-2xl">Where the Olive Symbolizes the Eternal Circle of Life</p>
         </div>
     </header>
 
