--- a/index.html
+++ b/index.html
@@ -40,22 +40,46 @@
     <section id="commandments" class="py-20 bg-olive-50">
         <div class="container">
             <h2 class="text-4xl font-playfair text-olive-800 mb-12 text-center">The Sacred Commandments</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-                <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-playfair text-olive-800 mb-4">First Commandment</h3>
-                    <p class="text-olive-700">Placeholder for the first sacred teaching</p>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">First Commandment</h3>
+                    <p class="text-olive-700 text-sm">Value all life, for all living things are part of the same cycle.</p>
                 </div>
-                <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-playfair text-olive-800 mb-4">Second Commandment</h3>
-                    <p class="text-olive-700">Placeholder for the second sacred teaching</p>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Second Commandment</h3>
+                    <p class="text-olive-700 text-sm">Respect your harvest and the harvest of others, for no fruit grows without labor.</p>
                 </div>
-                <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-playfair text-olive-800 mb-4">Third Commandment</h3>
-                    <p class="text-olive-700">Placeholder for the third sacred teaching</p>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Third Commandment</h3>
+                    <p class="text-olive-700 text-sm">Care for the land, for it sustains you as a mother sustains her child.</p>
                 </div>
-                <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-playfair text-olive-800 mb-4">Fourth Commandment</h3>
-                    <p class="text-olive-700">Placeholder for the fourth sacred teaching</p>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Fourth Commandment</h3>
+                    <p class="text-olive-700 text-sm">Honor your elders, for their wisdom is the root of your strength.</p>
+                </div>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Fifth Commandment</h3>
+                    <p class="text-olive-700 text-sm">Do not waste, for what is given to you must be used with gratitude.</p>
+                </div>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Sixth Commandment</h3>
+                    <p class="text-olive-700 text-sm">Speak truthfully, and let your word be as clear as pressed oil.</p>
+                </div>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Seventh Commandment</h3>
+                    <p class="text-olive-700 text-sm">Resolve conflict with peace, as storms destroy but calm brings growth.</p>
+                </div>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Eighth Commandment</h3>
+                    <p class="text-olive-700 text-sm">Be patient in hardship, as the olive tree bears fruit only in its season.</p>
+                </div>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Ninth Commandment</h3>
+                    <p class="text-olive-700 text-sm">Welcome the stranger, for all walk the same earth.</p>
+                </div>
+                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
+                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Tenth Commandment</h3>
+                    <p class="text-olive-700 text-sm">Observe rest and reflection, for stillness nourishes the soul like rain to soil.</p>
                 </div>
             </div>
         </div>
