--- a/index.html
+++ b/index.html
@@ -38,48 +38,68 @@
     </section>
 
     <section id="commandments" class="py-20 bg-olive-50">
-        <div class="container">
+        <div class="container max-w-4xl">
             <h2 class="text-4xl font-playfair text-olive-800 mb-12 text-center">The Sacred Commandments</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">First Commandment</h3>
-                    <p class="text-olive-700 text-sm">Value all life, for all living things are part of the same cycle.</p>
+            <div class="space-y-8">
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">I</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Value all life, for all living things are part of the same cycle.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Second Commandment</h3>
-                    <p class="text-olive-700 text-sm">Respect your harvest and the harvest of others, for no fruit grows without labor.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">II</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Respect your harvest and the harvest of others, for no fruit grows without labor.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Third Commandment</h3>
-                    <p class="text-olive-700 text-sm">Care for the land, for it sustains you as a mother sustains her child.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">III</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Care for the land, for it sustains you as a mother sustains her child.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Fourth Commandment</h3>
-                    <p class="text-olive-700 text-sm">Honor your elders, for their wisdom is the root of your strength.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">IV</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Honor your elders, for their wisdom is the root of your strength.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Fifth Commandment</h3>
-                    <p class="text-olive-700 text-sm">Do not waste, for what is given to you must be used with gratitude.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">V</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Do not waste, for what is given to you must be used with gratitude.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Sixth Commandment</h3>
-                    <p class="text-olive-700 text-sm">Speak truthfully, and let your word be as clear as pressed oil.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">VI</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Speak truthfully, and let your word be as clear as pressed oil.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Seventh Commandment</h3>
-                    <p class="text-olive-700 text-sm">Resolve conflict with peace, as storms destroy but calm brings growth.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">VII</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Resolve conflict with peace, as storms destroy but calm brings growth.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Eighth Commandment</h3>
-                    <p class="text-olive-700 text-sm">Be patient in hardship, as the olive tree bears fruit only in its season.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">VIII</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Be patient in hardship, as the olive tree bears fruit only in its season.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Ninth Commandment</h3>
-                    <p class="text-olive-700 text-sm">Welcome the stranger, for all walk the same earth.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">IX</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Welcome the stranger, for all walk the same earth.</p>
+                    </div>
                 </div>
-                <div class="commandment-card bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:transform hover:scale-105 hover:shadow-xl h-full">
-                    <h3 class="text-xl font-playfair text-olive-800 mb-3">Tenth Commandment</h3>
-                    <p class="text-olive-700 text-sm">Observe rest and reflection, for stillness nourishes the soul like rain to soil.</p>
+                <div class="flex items-start">
+                    <div class="text-8xl font-playfair text-olive-200 w-[12rem] text-right pr-8">X</div>
+                    <div class="border-l-2 border-olive-200 pl-8 py-4 min-h-[6rem] flex-1">
+                        <p class="text-xl text-olive-800">Observe rest and reflection, for stillness nourishes the soul like rain to soil.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -97,7 +117,7 @@
 
     <footer class="py-8 bg-olive-900 text-white">
         <div class="container text-center">
-            <p>&copy; 2025 Olivianism. All rights reserved.</p>
+            <p>&copy; 2024 Olivianism. All rights reserved.</p>
         </div>
     </footer>
 </body>
