--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <header class="min-h-screen bg-olive-100 relative overflow-hidden">
         <nav class="absolute top-0 left-0 right-0 z-10 py-6">
             <div class="container flex justify-between items-center">
-                <div class="text-2xl font-playfair text-olive-800">Olivianism</div>
+                <div class="text-2xl font-playfair text-olive-800 flex items-center gap-1">
+                    <img src="O.svg" alt="O"  width="50" height="50" />
+                    <span>livianism</span>
+                </div>
                 <ul class="flex space-x-8">
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#commandments" class="nav-link">Commandments</a></li>
@@ -22,7 +25,10 @@
             </div>
         </nav>
         <div class="container h-screen flex flex-col justify-center items-center text-center">
-            <h1 class="text-5xl md:text-7xl font-playfair text-olive-800 mb-6">Welcome to Olivianism</h1>
+            <h1 class="text-5xl md:text-7xl font-playfair text-olive-800 mb-6 flex items-center justify-center gap-2">
+                <img src="O.svg" alt="O" class="h-[1em] w-auto" />
+                <span>livianism</span>
+            </h1>
             <p class="text-xl md:text-2xl text-olive-700 max-w-2xl">Where the Olive Symbolizes the Eternal Circle of Life</p>
         </div>
     </header>
