--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="min-h-screen bg-olive-100 relative overflow-hidden">
-        <nav class="absolute top-0 left-0 right-0 z-10 py-6">
+    <header class="min-h-screen bg-olive-100 relative overflow-hidden bg-[url('../assets/olive_tree_background.png')] bg-cover bg-center">
+        <div class="absolute inset-0 bg-black/10"></div>
+        <nav class="absolute top-0 left-0 right-0 z-10 py-4">
             <div class="container flex justify-between items-center">
-                <div class="text-2xl font-playfair text-olive-800">Olivianism</div>
-                <ul class="flex space-x-8">
-                    <li><a href="#about" class="nav-link">About</a></li>
-                    <li><a href="#commandments" class="nav-link">Commandments</a></li>
-                    <li><a href="#join" class="nav-link">Join Us</a></li>
+                <div class="text-2xl font-playfair text-white md:absolute md:left-1/2 md:transform md:-translate-x-1/2">Olivianism</div>
+                <ul class="flex space-x-8 ml-auto">
+                    <li><a href="#about" class="nav-link text-white">About</a></li>
+                    <li><a href="#commandments" class="nav-link text-white">Commandments</a></li>
+                    <li><a href="#join" class="nav-link text-white">Join Us</a></li>
                 </ul>
             </div>
         </nav>
-        <div class="container h-screen flex flex-col justify-center items-center text-center">
-            <h1 class="text-5xl md:text-7xl font-playfair text-olive-800 mb-6">Welcome to Olivianism</h1>
-            <p class="text-xl md:text-2xl text-olive-700 max-w-2xl">Where the Olive Symbolizes the Eternal Circle of Life</p>
+        <div class="container h-screen flex flex-col justify-center items-end text-center pr-5 -mt-20">
+            <h1 class="text-5xl md:text-7xl font-playfair text-white mb-6">Welcome to Olivianism</h1>
+            <p class="text-xl md:text-2xl text-white max-w-2xl">Where the Olive Symbolizes the Eternal Circle of Life</p>
         </div>
     </header>
 
