support small devices

--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@
     <header class="min-h-screen bg-olive-100 relative overflow-hidden bg-[url('../assets/olive_tree_background.png')] bg-cover bg-center">
         <div class="absolute inset-0 bg-black/10"></div>
         <nav class="absolute top-0 left-0 right-0 z-10 py-4">
-            <div class="container flex justify-between items-center">
-                <div class="flex-1"></div>
+            <div class="container flex flex-col md:flex-row justify-center md:justify-between items-center gap-4 md:gap-0">
                 <div class="text-2xl font-playfair text-olive-800 flex items-center gap-0.5">
                     <img src="O.svg" alt="O" width="45" height="45" />
                     <span class="text-white">livianism</span>
                 </div>
-                <ul class="flex space-x-8 flex-1 justify-end">
+                <ul class="flex space-x-8">
                     <li><a href="#about" class="nav-link text-white">About</a></li>
                     <li><a href="#commandments" class="nav-link text-white">Commandments</a></li>
                     <li><a href="#join" class="nav-link text-white">Join Us</a></li>
                 </ul>
             </div>
         </nav>
-        <div class="container h-screen flex flex-col justify-start items-end text-right pl-[28rem] pt-72">
+        <div class="container h-screen flex flex-col justify-start items-center md:items-end text-center md:text-right pl-0 md:pl-[28rem] pt-72">
             <h1 class="text-5xl md:text-7xl font-playfair text-olive-800 mb-6 flex items-center justify-center gap-1">
                 <img src="O.svg" alt="O" class="h-[1em] w-auto" />
                 <span class="text-white">livianism</span>
             </h1>
-            <p class="text-xl md:text-2xl text-white text-right">Where the Olive Symbolizes the Eternal Circle of Life</p>
+            <p class="text-xl md:text-2xl text-white text-center md:text-right">Where the Olive Symbolizes the Eternal Circle of Life</p>
         </div>
     </header>
 
